CheckBox, RadioButton: Expose label spacing pixel metrics

The default value upstream seems to be 6dip, which is not what Breeze
really uses for layouting. Interestingly, qqc2-desktop-style has the
needed infrastructure in place to query these pixel metrics from a
native style, so QtQuick apps have used the wrong value in for quite
some time now.

As a drive-by clean-up, let's collapse those for identical cases above.

BUG: 448365